bug fix for list not showing recipes

--- a/src/app/recipes/recipes.component.css
+++ b/src/app/recipes/recipes.component.css
@@ -1,8 +1,3 @@
-/* * {
-  display: flex;
-  justify-content: center;
-
-} */
 
 h2 {
   margin: 30px 0 30px 0;
